--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.2",
     "gray-matter": "^4.0.3",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
